fix scrollbar now

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,7 +48,7 @@ body {
   background-position: center; 
   background-repeat: repeat-y;
   background-color: $primary-color;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 h1 {
